--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ ul.bxslider {
 	margin:0;
 }
 
+ul.bxslider li {
+	margin:0;
+}
+
 .bx-wrapper .bx-caption {
 	background: rgba(80, 80, 80, 0.5);
 }
