--- a/style.css
+++ b/style.css
@@ -47,12 +47,45 @@ ul.bxslider li {
 	background-color: inherit;
 }
 
-.bx-wrapper-noshadow .bx-wrapper .bx-viewport {
+.bx-wrapper-noborder .bx-wrapper .bx-viewport {
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	border: none;
 	left: 0px;
+}
+
+.bx-wrapper-border-white .bx-wrapper .bx-viewport {
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border:  5px solid #fff;
+	left: -5px;
+}
+
+.bx-wrapper-border-gray .bx-wrapper .bx-viewport {
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border:  5px solid #888;
+	left: -5px;
+}
+
+.bx-wrapper-border-black .bx-wrapper .bx-viewport {
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border:  5px solid #000;
+	left: -5px;
+	display: block;
+}
+
+/* Theme trick */
+
+#content .bx-wrapper img {
+	max-width: 100%;
+	box-shadow: none;
+	display: block;
 }
 
 /* Safari trick */
