--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+/* Text elements */
+
 .bx-wrapper {
 	box-sizing:content-box;
 	margin: 0 auto 40px;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .bx-wrapper div {
 	box-sizing:content-box;
 }
 
+.entry-content ul.bxslider,
 ul.bxslider {
 	margin:0;
 	padding:0;
@@ -44,6 +50,11 @@ ul.bxslider li {
 	margin: 0 3px;
 }
 
+.bx-wrapper .bx-controls-auto {
+  margin-bottom:-8px;
+}
+
+
 .bx-wrapper .bx-viewport {
 	background-color: inherit;
 }
@@ -61,7 +72,7 @@ ul.bxslider li {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	border:  5px solid #fff;
-	left: -5px;
+	margin: -5px;
 }
 
 .bx-wrapper-border-gray .bx-wrapper .bx-viewport {
@@ -69,7 +80,9 @@ ul.bxslider li {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	border:  5px solid #888;
-	left: -5px;
+	margin-left: -5px;
+	margin-top:-5px;
+	margin-bottom:-5px;
 }
 
 .bx-wrapper-border-black .bx-wrapper .bx-viewport {
@@ -77,7 +90,7 @@ ul.bxslider li {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	border:  5px solid #000;
-	left: -5px;
+	margin: -5px;
 	display: block;
 }
 
@@ -89,6 +102,13 @@ ul.bxslider li {
 	left: 0px;
 }
 
+.bx-wrapper-border-shadow .bx-wrapper .bx-viewport {
+	-moz-box-shadow: 0 0 5px #ccc;
+	-webkit-box-shadow: 0 0 5px #ccc;
+	box-shadow: 0 0 5px #ccc;
+	border:  5px solid #fff;
+	margin: -5px;
+}
 
 /* Theme trick */
 
